# networkautomation

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANSIBLE_IMPLEMENTATION_SUMMARY.md  AUDIT_REPORT.md  AUTO_REMEDIATION_SUMMARY.md  CONTRIBUTING.md  DRIFT_ANALYSIS_SUMMARY.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MULTI_REGION_IMPLEMENTATION.md  Makefile  PLUGIN_SYSTEM_SUMMARY.md  README.md  ROADMAP.md  SECURITY_SUMMARY.md  SERVICENOW_INTEGRATION.md  WEBHOOK_IMPLEMENTATION.md  bunfig.toml  docker-compose.yml  migration.md  opencode.json  plan.md  progress.md
backend/: .env.example  alembic.ini  celery_app.py  celerybeat-schedule-shm  celerybeat-schedule-wal  components.json  esbuild.config.js  init_db.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  tailwind.config.js  test.db  tsconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_add_vault_secret_path.py  001_initial.py  002_add_tenancy.py  003_add_ip_ranges.py  004_add_reachability.py  005_add_topology_links.py  006_add_api_keys.py  1cd53fd9a68a_add_scheduled_for_to_jobs.py  2e19404bff79_add_credentials_table.py  bbd71a19abe0_initial_migration.py  e7baf9bff2e9_add_all_tables.py
backend/app/: celery_app.py  dependencies.py  main.py
backend/app/api/: __init__.py  api_keys.py  auth.py  automation.py  commands.py  compliance.py  config.py  configs.py  customers.py  devices.py  errors.py  jobs.py  metrics.py  network.py  topology.py  users.py  websocket.py  websockets.py  ws.py
backend/app/automation/: __init__.py  context.py  inventory.py  napalm_device.py  netbox_inventory.py  nornir_init.py  tasks_cli.py  tasks_config.py  tasks_network.py  tasks_topology.py  tasks_validate.py
backend/app/compliance/: models.py
backend/app/config_backup/: diff.py  models.py
backend/app/core/: __init__.py  audit.py  auth.py  config.py  credentials.py  crypto.py  deps.py  logging.py  metrics.py  security.py  time.py
backend/app/crud/: compliance.py  device.py  job.py  user.py
backend/app/db/: __init__.py  models.py  session.py  utils.py
backend/app/devices/: models.py
backend/app/domain/: __init__.py  context.py  devices.py  exceptions.py  jobs.py
backend/app/jobs/: __init__.py  compliance.py  config_backup.py  config_deploy.py  events.py  manager.py  models.py  run_commands.py  service.py  tasks.py
backend/app/repositories/: __init__.py  api_key_repository.py  base.py  compliance_repository.py  config_repository.py  credential_repository.py  customer_repository.py  device_repository.py  job_repository.py  user_repository.py
backend/app/schemas/: __init__.py  api_key.py  auth.py  command.py  compliance.py  config_backup.py  config_deploy.py  customer.py  customer_ip_range.py  device.py  job.py  user.py
backend/app/services/: __init__.py  api_key_service.py  compliance_service.py  config_service.py  credential_service.py  customer_service.py  device_service.py  job_service.py  user_service.py
backend/app/tests/: conftest.py  test_api_keys.py  test_audit.py  test_auth.py  test_commands.py  test_compliance.py  test_compliance_jobs.py  test_config.py  test_crypto.py  test_customers.py  test_devices.py  test_diff.py  test_health.py  test_job_service.py  test_jobs.py  test_logging.py  test_metrics.py  test_network.py  test_scheduled_tasks.py  test_settings.py  test_users_admin.py  test_websocket.py
backend/netauto_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/static/css/: tailwind.css
backend/static/js/: islands.js
backend/static/src/: input.css  islands.tsx
backend/staticfiles/css/: admin-shadcn.css  tailwind.css
backend/staticfiles/js/: islands.css  islands.css.map  islands.js
backend/staticfiles/src/: islands.tsx
backend/templates/: base.html  dashboard.html  placeholder.html
backend/templates/admin/: base_site.html  login.html
backend/templates/auth/: 2fa_backup_codes.html  2fa_manage.html  2fa_setup.html  2fa_verify.html  login.html  logout.html
backend/templates/commands/: _result.html  reachability.html  run.html
backend/templates/compliance/: _overview_table.html  _policies_table.html  _remediation_actions_table.html  _remediation_rules_table.html  _results_table.html  (+7 more)
backend/webnet/: asgi.py  automation.py  ldap_config.py  routing.py  settings.py  urls.py  wsgi.py
(+619 files in other folders)
