[tool.poetry]
name = "network-automation-backend"
version = "0.1.0"
description = "Backend for the network automation web application."
authors = ["Jules <jules@example.com>"]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "==3.2.0"
celery = "^5.3.6"
redis = "^5.0.1"
pydantic = "2.5.3"
pydantic-settings = "2.1.0"
nornir = "^3.3.0"
napalm = "^4.1.0"
netmiko = "^4.2.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
httpx = "^0.25.1"
mypy = "^1.7.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
